--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GTA RP | CURSO DE MODULAÇÃO</title>
+    <title>ARCANJO PERALTA | CURSO DE MODULAÇÃO</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap');
 
@@ -11,7 +11,8 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            cursor: crosshair; /* Cursor em formato de mira/X */
+            /* Esconde o mouse padrão em todo o site */
+            cursor: none !important;
         }
 
         body {
@@ -20,6 +21,21 @@
             font-family: 'Inter', sans-serif;
             line-height: 1.5;
             padding: 20px;
+            overflow-x: hidden;
+        }
+
+        /* O CÍRCULO DO MOUSE */
+        #custom-cursor {
+            width: 20px;
+            height: 20px;
+            border: 2px solid #fff;
+            border-radius: 50%;
+            position: fixed;
+            pointer-events: none; /* Garante que o círculo não atrapalhe os cliques */
+            z-index: 9999;
+            transition: transform 0.1s ease-out;
+            transform: translate(-50%, -50%);
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
         }
 
         .main-card {
@@ -59,38 +75,68 @@
             text-transform: uppercase;
             transition: 0.3s;
         }
-        .yt-link:hover { background: #b30000; transform: scale(1.05); }
+        .yt-link:hover { background: #b30000; transform: scale(1.1); }
 
         nav a { color: #666; text-decoration: none; margin-left: 20px; font-size: 0.8rem; text-transform: uppercase; }
 
-        .intro-grid { display: flex; gap: 40px; margin-bottom: 50px; flex-wrap: wrap; }
+        .intro-grid { 
+            display: flex; 
+            gap: 40px; 
+            margin-bottom: 50px; 
+            flex-wrap: wrap; 
+            align-items: flex-start; 
+        }
 
         .profile-img {
             min-width: 320px;
             height: 380px;
             background-color: #222;
-            background-image: url('https://github.com/httpsHYDERKS/index.html/blob/main/Captura%20de%20tela%202026-02-05%20224222.png?raw=true'); 
+            background-image: url('https://raw.githubusercontent.com/ttpshyderks/ttpshyderks.github.io/main/Captura%20de%20tela%202026-02-05%20205441.png'); 
             background-size: cover;
             background-position: center;
             border: 1px solid #333;
         }
 
+        .intro-text { flex: 1; min-width: 300px; }
+
         .glitch {
-            font-size: 2.8rem;
-            font-weight: 700;
+            font-size: 3.5rem;
+            font-weight: 900;
             color: #fff;
             position: relative;
             text-transform: uppercase;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
+            letter-spacing: -1px;
         }
+
         .glitch::before, .glitch::after {
             content: "ARCANJO PERALTA";
-            position: absolute; top: 0; left: 0; width: 100%; height: 100%;
+            position: absolute; top: 0; left: 0; width: 100%; height: 100%; opacity: 0.8;
         }
-        .glitch::before { left: 2px; text-shadow: -2px 0 #ff00c1; clip: rect(44px, 450px, 56px, 0); animation: g1 5s infinite linear alternate-reverse; }
-        .glitch::after { left: -2px; text-shadow: -2px 0 #00fff9; clip: rect(44px, 450px, 56px, 0); animation: g2 5s infinite linear alternate-reverse; }
-        @keyframes g1 { 0% { clip: rect(31px, 9999px, 94px, 0); } 100% { clip: rect(2px, 9999px, 98px, 0); } }
-        @keyframes g2 { 0% { clip: rect(65px, 9999px, 100px, 0); } 100% { clip: rect(77px, 9999px, 34px, 0); } }
+
+        .glitch::before {
+            left: 3px;
+            text-shadow: -3px 0 #ff00c1;
+            clip: rect(44px, 450px, 56px, 0);
+            animation: glitch-anim 2s infinite linear alternate-reverse;
+        }
+
+        .glitch::after {
+            left: -3px;
+            text-shadow: -3px 0 #00fff9;
+            clip: rect(44px, 450px, 56px, 0);
+            animation: glitch-anim-2 3s infinite linear alternate-reverse;
+        }
+
+        @keyframes glitch-anim {
+            0% { clip: rect(10px, 9999px, 20px, 0); transform: skew(0.5deg); }
+            100% { clip: rect(40px, 9999px, 50px, 0); transform: skew(-0.5deg); }
+        }
+
+        @keyframes glitch-anim-2 {
+            0% { clip: rect(50px, 9999px, 60px, 0); transform: skew(-0.5deg); }
+            100% { clip: rect(90px, 9999px, 100px, 0); transform: skew(-0.5deg); }
+        }
 
         .section-title {
             font-size: 0.9rem; color: #fff; text-transform: uppercase; letter-spacing: 2px;
@@ -101,17 +147,16 @@
         .codigo-q-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 10px; font-size: 0.85rem; }
         .codigo-item { list-style: none; padding: 4px 0; border-bottom: 1px solid #222; }
 
-        .rules-list li { list-style: none; margin-bottom: 8px; padding-left: 20px; position: relative; color: #aaa; font-size: 0.9rem; }
-        .rules-list li::before { content: "➢"; position: absolute; left: 0; color: #666; }
-
         .patrol-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); gap: 15px; }
-        .patrol-item { background: #1a1a1a; padding: 10px; border-radius: 4px; border-left: 3px solid #333; margin-bottom: 5px; }
+        .patrol-item { background: #1a1a1a; padding: 10px; border-radius: 4px; border-left: 3px solid #333; }
         .highlight-red { color: #ff4d4d; font-weight: bold; }
 
         footer { margin-top: 60px; padding-top: 20px; border-top: 1px solid #333; display: flex; justify-content: space-between; font-size: 0.7rem; color: #555; }
     </style>
 </head>
 <body>
+
+    <div id="custom-cursor"></div>
 
     <div class="main-card">
         <header>
@@ -126,8 +171,8 @@
             <div class="profile-img"></div>
             <div class="intro-text">
                 <div class="glitch">ARCANJO PERALTA</div>
-                <h3 style="color:#fff; text-transform:uppercase; margin-bottom:15px;">Curso de Modulação</h3>
-                <p>Seja bem-vindo ao Curso de Modulação! Este curso é crucial para aprender o modo correto de modular na rádio. <b>O curso não é opcional:</b> quem quiser subir sua patente terá que ter os cursos necessários.</p>
+                <h3 style="color:#fff; text-transform:uppercase; margin-bottom:15px; border-bottom: 1px solid #333; padding-bottom: 5px;">Curso de Modulação</h3>
+                <p>Seja bem-vindo ao portal de modulação. Este curso é <b>obrigatório para subida de patente.</b></p>
                 <p style="margin-top:10px;">Dúvidas? Não tenha medo de perguntar!</p>
             </div>
         </section>
@@ -138,48 +183,18 @@
                 <li class="codigo-item"><b>QAP</b> – Na escuta.</li>
                 <li class="codigo-item"><b>QRR</b> – Pedido de reforço.</li>
                 <li class="codigo-item"><b>QTH</b> – Localização.</li>
-                <li class="codigo-item"><b>QRA</b> – Nome e patente.</li>
-                <li class="codigo-item"><b>QRL</b> – Estou ocupado.</li>
-                <li class="codigo-item"><b>QRQ</b> – Transmita mais rápido.</li>
             </ul>
             <ul>
-                <li class="codigo-item"><b>QRS</b> – Transmita mais devagar.</li>
-                <li class="codigo-item"><b>QRU</b> – Ocorrência.</li>
-                <li class="codigo-item"><b>QTX</b> – Saindo de serviço.</li>
-                <li class="codigo-item"><b>QSV / VTR</b> – Viatura.</li>
                 <li class="codigo-item"><b>QSL</b> – Entendido.</li>
-                <li class="codigo-item"><b>QSO</b> – Comunicar algo importante.</li>
-            </ul>
-            <ul>
                 <li class="codigo-item"><b>QRX</b> – Prioridade no Rádio.</li>
-                <li class="codigo-item"><b>QTA</b> – Abortar.</li>
                 <li class="codigo-item"><b>TKS</b> – Obrigado.</li>
-                <li class="codigo-item"><b>QSM</b> – Repita a mensagem.</li>
-                <li class="codigo-item"><b>QRV</b> – À disposição.</li>
-                <li class="codigo-item"><b>QSJ</b> – Dinheiro Sujo.</li>
             </ul>
         </div>
 
-        <h2 class="section-title"><span>02</span> Regras de Modulação</h2>
-        <ul class="rules-list">
-            <li>Proibido xingamentos ou gírias ("lá", "ali", "matei um").</li>
-            <li>Modulação breve e rápida; aprenda a ouvir antes de falar.</li>
-            <li>Conversas paralelas apenas via <b>/pd</b>.</li>
-            <li>Mantenha a calma, module com clareza mesmo sob pressão.</li>
-            <li>Se pedir QRR, informe seu QRA.</li>
-            <li>Ao comando de QRX, silencie a rádio imediatamente.</li>
-            <li>Modulação em VTR pelo P2 (GTM pode ser o piloto).</li>
-            <li>Perseguição: modulação pela viatura primária.</li>
-        </ul>
-
-        <h2 class="section-title"><span>03</span> Código de Patrulha</h2>
+        <h2 class="section-title"><span>02</span> Código de Patrulha</h2>
         <div class="patrol-grid">
-            <div class="patrol-item"><b>Cod 0:</b> Iniciando patrulhamento.</div>
-            <div class="patrol-item"><b>Cod 1:</b> Intensidade baixa (trânsito).</div>
-            <div class="patrol-item"><b>Cod 2:</b> Intensidade média (Mascarados/Roubos).</div>
-            <div class="patrol-item"><b>Cod 3:</b> Uso não letal / Intensidade alta.</div>
-            <div class="patrol-item"><b>Cod 5:</b> <span class="highlight-red">FOGO LIBERADO (Atire para matar).</span></div>
-            <div class="patrol-item"><b>Cod 7:</b> <span class="highlight-red">QRR MÁXIMO, CHAMAR FORÇA TÁTICA.</span></div>
+            <div class="patrol-item"><b>Cod 5:</b> <span class="highlight-red">FOGO LIBERADO.</span></div>
+            <div class="patrol-item"><b>Cod 7:</b> <span class="highlight-red">QRR MÁXIMO.</span></div>
         </div>
 
         <footer>
@@ -187,6 +202,23 @@
             <div>TRANSMISSÃO CRIPTOGRAFADA</div>
         </footer>
     </div>
+
+    <script>
+        const cursor = document.getElementById('custom-cursor');
+
+        document.addEventListener('mousemove', (e) => {
+            cursor.style.left = e.clientX + 'px';
+            cursor.style.top = e.clientY + 'px';
+        });
+
+        // Efeito de clique (o círculo aumenta quando você clica)
+        document.addEventListener('mousedown', () => {
+            cursor.style.transform = 'translate(-50%, -50%) scale(1.5)';
+        });
+        document.addEventListener('mouseup', () => {
+            cursor.style.transform = 'translate(-50%, -50%) scale(1)';
+        });
+    </script>
 
 </body>
 </html>
