--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         <footer>
             <div>© 2026 GTA RP FIVEM</div>
             <div class="footer-center">ARCANJO PERALTA</div>
-            <div>SISTEMA CRIPTOGRAFADO</div>
+            <div>Todos os direitos reservados © Uso indevido sujeito a processo</div>
         </footer>
     </div>
 
